force-app/main/default/objects/Review__c/fields/Booking_ID__c.field-meta.xml
<CustomField>
    <fullName>Booking_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of Booking</description>
    <label>Booking ID</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>