force-app/main/default/objects/Review__c/fields/Flight_Booking_ID__c.field-meta.xml
<CustomField>
    <fullName>Flight_Booking_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Booking ID of Flight</description>
    <label>Flight Booking ID</label>
    <referenceTo>FlightListing__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>