force-app/main/default/objects/Review__c/fields/Hotel_Booking_ID__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Booking_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Booking Id Of Hotel</description>
    <label>Hotel Booking ID</label>
    <referenceTo>HotelListing__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>