force-app/main/default/objects/Review__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <description>Review Image</description>
    <label>Image</label>
    <type>Url</type>
</CustomField>